# gifview

./: .gitignore  CMakeLists.txt  README.md  keys.conf
src/: CMakeLists.txt  args.c  args.h  config.h.in  font.h.in  fontrenderer.c  fontrenderer.h  gif.c  gif.h  keybinds.c  keybinds.h  lzw.c  lzw.h  main.c  main.cpp  menu.c  menu.h  sdlapp.c  sdlapp.h  sdldata.c  sdldata.h  sdlgif.c  sdlgif.h  util.c  util.h
src/gif/: CMakeLists.txt  gif.c  gif.h  lzw.c  lzw.h
src/include/: CMakeLists.txt  util.c  util.h
src/include/gif/: CMakeLists.txt  gif-load.c  gif.c  gif.h  lzw.c  lzw.h
src/include/linkedlist/: CMakeLists.txt  linkedlist.c  linkedlist.h
src/menu/: CMakeLists.txt  boundfunction.c  boundfunction.h  menu.c  menu.h  menubutton.c  menubutton.h  signal.c  signal.h
src/viewer/: CMakeLists.txt  drawdata.c  drawdata.h  imagetransform.c  imagetransform.h  viewer.c  viewer.h
